syntax = "proto3";

package RequestService;

service RequestService {
    rpc CreateOGRequest(CreateOGRequestReq) returns (CreateOGRequest) {}
    rpc CreateRoleRequest(CreateRoleRequestReq) returns (CreateRoleRequest) {}
    rpc CreateEntityRequest(CreateEntityRequestReq) returns (CreateEntityRequest){}
    rpc AssignRoleToEntityRequest(AssignRoleToEntityRequestReq) returns (AssignRoleToEntityRequest) {}
    rpc RenameOGRequest(RenameOGRequestReq) returns (RenameOGRequest) {}
    rpc RenameRoleRequest(RenameRoleRequestReq) returns (RenameRoleRequest) {}
    rpc EditEntityRequest(EditEntityRequestReq) returns (EditEntityRequest){}
    rpc DeleteOGRequest(DeleteOGRequestReq) returns (DeleteOGRequest){}
    rpc DeleteRoleRequest(DeleteRoleRequestReq) returns (DeleteRoleRequest){}
    
    rpc DisconectRoleFromEntityRequest(DisconectRoleFromEntityRequestReq) returns (DisconectRoleFromEntityRequest){}

    rpc UpdateRequest(UpdateRequestReq) returns (Request){}
    rpc DeleteRequest(DeleteRequestReq) returns (SuccessMessage){}
    

    rpc GetRequestsByCommander(GetRequestsByPersonIdReq) returns (RequestArray){}
    rpc GetRequestsSubmittedBy(GetRequestsByPersonIdReq) returns (RequestArray){}
    rpc GetAllRequests(GetAllRequestsReq) returns (RequestArray){}
    rpc GetRequestById(GetRequestByIdReq) returns (Request) {}
}

//Enums

enum RequestType {
    CREATE_OG = 0;
    CREATE_ROLE = 1;
    ASSIGN_ROLE_TO_ENTITY = 2;
    CREATE_ENTITY=3;
    RENAME_OG = 4;
    RENAME_ROLE = 5;
    EDIT_ENTITY = 6;
    DELETE_OG = 7;
    DELETE_ROLE = 8;
    DISCONNECT_ROLE=9;
}

enum RequestStatus{
    SUBMITTED = 0;
    DECLINED = 1;
    IN_PROGRESS = 2;
    DONE = 3;
    FAILED = 4;
}

enum StageStatus{
    UNKNOWN = 0;
    IN_PROGRESS = 1;
    DONE = 2;
    FAILED = 3;
}

enum Decision{
    UNKNOWN = 0;
    APPROVED = 1;
    DENIED = 2;
}

message SuccessMessage{
    bool success = 1;
}

message ApproverDecision{
    string approverId = 1;
    Decision approverDecision = 2;
}

message KartoffelStatus{
    StageStatus status = 1;
    string message = 2;
    string createdId = 3;
}

message ADStatus{
    StageStatus status = 1;
    string message = 2;
}

message RequestArray{
    repeated Request requests = 1;
    int32 totalCount = 2;
}

//simple messages

message GetRequestsByPersonIdReq{
    string id = 1;
    int32 from = 2;
    int32 to = 3;
}

message GetAllRequestsReq{
    int32 from = 1;
    int32 to = 2;
}

message GetRequestByIdReq{
    string id = 1;
}

message DeleteRequestReq{
    string id = 1;
}

message UpdateRequestReq{
    string id = 1;
    UpdateRequestProperties requestProperties = 2;
}
message UpdateRequestProperties{
    optional string submittedBy = 1;
    optional RequestStatus status = 2;
    optional ApproverDecision commanderDecision = 3;
    optional ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    optional KartoffelStatus kartoffelStatus = 6;
    optional ADStatus adStatus = 7;
    optional KartoffelParams kartoffelParams = 8;
    optional ADParams adParams = 9;
}

//Request messages

//CreateOG
message CreateOGRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;

    CreateOGKartoffelParams kartoffelParams = 8;
    CreateOGADParams adParams = 9;
}

message CreateOGRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    CreateOGKartoffelParams kartoffelParams = 8;
    CreateOGADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}

message CreateOGKartoffelParams{
    string name = 1;
    string parent = 2;
    string source = 3;
}

message CreateOGADParams{
    string ouDisplayName = 1;
    string ouName = 2;
    string name = 3;
}

//CreateRole
message CreateRoleRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    CreateRoleKartoffelParams kartoffelParams = 8;
    CreateRoleADParams adParams = 9;
}

message CreateRoleRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    CreateRoleKartoffelParams kartoffelParams = 8;
    CreateRoleADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message CreateRoleKartoffelParams{
    //for role
    string jobTitle = 1;
    string directGroup = 2;
    string roleId = 3;

    //forDigitalIdentity
    string type = 4;
    string source = 5;
    string uniqueId = 6;
    string mail = 7;
    bool isRoleAttachable = 8;
}

message CreateRoleADParams{
    string samAccountName = 1;
    string ouDisplayName = 2;
    string jobTitle = 3;
}

//CreateEntity
message CreateEntityRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    CreateEntityKartoffelParams kartoffelParams = 8;
    CreateEntityADParams adParams = 9;
}

message CreateEntityRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    CreateEntityKartoffelParams kartoffelParams = 8;
    CreateEntityADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message CreateEntityKartoffelParams{
    string firstName = 1;
    string lastName = 2;
    string identityCard = 3;
    string personalNumber = 4;
    string serviceType = 5;
    repeated string phone = 6;
    repeated string mobilePhone = 7;
    string address = 8;
    string clearance = 9;
    string sex = 10;
    int64 birthdate = 11;
    string entityType = 12;
}

message CreateEntityADParams{

}

//AssignRoleToEntity
message AssignRoleToEntityRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    AssignRoleToEntityKartoffelParams kartoffelParams = 8;
    AssignRoleToEntityADParams adParams = 9;
}

message AssignRoleToEntityRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    AssignRoleToEntityKartoffelParams kartoffelParams = 8;
    AssignRoleToEntityADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message AssignRoleToEntityKartoffelParams{
    string id = 1;
    string uniqueId = 2;
}

message AssignRoleToEntityADParams{
    string oldSAMAccountName = 1;
    string newSAMAccountName = 2;
    string upn = 3;
    string firstName = 4;
    string lastName = 5;
    string fullName = 6;
    string rank = 7;
    string roleSerialCode = 8;
}

//RenameOG
message RenameOGRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    RenameOGKartoffelParams kartoffelParams = 8;
    RenameOGADParams adParams = 9;
}

message RenameOGRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    RenameOGKartoffelParams kartoffelParams = 8;
    RenameOGADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message RenameOGKartoffelParams{
//?
}

message RenameOGADParams{
//?
}

//RenameRole
message RenameRoleRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    RenameRoleKartoffelParams kartoffelParams = 8;
    RenameRoleADParams adParams = 9;
}

message RenameRoleRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    RenameRoleKartoffelParams kartoffelParams = 8;
    RenameRoleADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message RenameRoleKartoffelParams{
//?
}

message RenameRoleADParams{
//?
}

//EditEntity
message EditEntityRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    EditEntityKartoffelParams kartoffelParams = 8;
    EditEntityADParams adParams = 9;
}

message EditEntityRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    EditEntityKartoffelParams kartoffelParams = 8;
    EditEntityADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message EditEntityKartoffelParams{
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string identityCard = 4;
    string personalNumber = 5;
    string serviceType = 6;
    repeated string phone = 7;
    repeated string mobilePhone = 8;
    string address = 9;
    string clearance = 10;
    string sex = 11;
    int64 birthdate = 12;
    string entityType = 13;
}

message EditEntityADParams{
    string samAccountName = 1;
    string firstName = 2;
    string lastName = 3;
    string fullName = 4;
}

//DeleteOG
message DeleteOGRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DeleteOGKartoffelParams kartoffelParams = 8;
    DeleteOGADParams adParams = 9;
}

message DeleteOGRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DeleteOGKartoffelParams kartoffelParams = 8;
    DeleteOGADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message DeleteOGKartoffelParams{
    string id = 1;
}

message DeleteOGADParams{
    //?
}


//DeleteRole
message DeleteRoleRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DeleteRoleKartoffelParams kartoffelParams = 8;
    DeleteRoleADParams adParams = 9;
}

message DeleteRoleRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DeleteRoleKartoffelParams kartoffelParams = 8;
    DeleteRoleADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message DeleteRoleKartoffelParams{
    string roleId = 1;
    string uniqueId = 2;
}

message DeleteRoleADParams{
    string samAccountName = 1;
}

//DisconectRoleFromEntity
message DisconectRoleFromEntityRequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DisconectRoleFromEntityKartoffelParams kartoffelParams = 8;
    DisconectRoleFromEntityADParams adParams = 9;
}

message DisconectRoleFromEntityRequest{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    DisconectRoleFromEntityKartoffelParams kartoffelParams = 8;
    DisconectRoleFromEntityADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
}
message DisconectRoleFromEntityKartoffelParams{
    string id = 1;
    string uniqueId = 2;
}

message DisconectRoleFromEntityADParams{
    string samAccountName = 1;
}


message KartoffelParams{
    //CreateOG
    optional string name = 1;
    optional string parent = 2;
    optional string source = 3; //for almost all requests

    //CreateRole

    //for role
    optional string jobTitle = 4;
    optional string directGroup = 5;
    optional string roleId = 6;

    //forDigitalIdentity
    optional string type = 7;
    // string source = 2;
    optional string uniqueId = 8;
    optional string mail = 9;
    optional bool isRoleAttachable = 10;

    //AssignRoleToEntity, same as changing role to entity
    optional string id = 11;
    // string uniqueId = 8;
    //CreateEntity
    optional string firstName = 12;
    optional string lastName = 13;
    optional string identityCard = 14;
    optional string personalNumber = 15;
    optional string serviceType = 16;
    repeated string phone = 17;
    repeated string mobilePhone = 18;
    optional string address = 19;
    optional string clearance = 20;
    optional string sex = 21;
    optional int64 birthdate = 22;
    optional string entityType = 23;

    //RenameOG
    // ?

    //RenameRole
    // ?

    //EditEntity
    // string firstName = 9;
    // string lastName = 10;
    // string identityCard = 11;
    // string personalNumber = 12;
    // string serviceType = 13;
    // repeated string phone = 14;
    // repeated string mobilePhone = 15;
    // string address = 16;
    // string clearance = 16;
    // string sex = 17;
    // int64 birthdate = 18;
    // string entityType = 19;
    // string id = 

    //DeleteOG
    // string id = ;

    //DeleteRole
    // string roleId = ;
    // string uniqueId = ;

    //DisconectRoleFromEntity
    // string uniqueId = 8;
    // string id = 9;
}

message ADParams{
    //CreateOG
    optional string ouDisplayName = 1;
    optional string ouName = 2;
    optional string name = 3;

    //CreateRole
    optional string samAccountName = 4;
    // string ouDisplayName = ;
    optional string jobTitle = 5;

    //AssignRoleToEntity
    optional string oldSAMAccountName = 6;
    optional string newSAMAccountName = 7;
    optional string upn = 8;
    optional string firstName = 9;
    optional string lastName = 10;
    optional string fullName = 11;
    optional string rank = 12;
    optional string roleSerialCode = 13;
    //CreateEntity - nothing

    //RenameOG
    //string ouDisplayName = ;
    optional string oldName = 14;
    optional string newName = 15;

    //RenameRole
    // string samAccountName = ;
    optional string newJobTitle = 16;

    //DeleteOG - ?

    //EditEntity
    // string samAccountName = ;
    // string firstName = ;
    // string lastName = ;
    // string fullName = ;

    //DisconectRoleFromEntity
    // string samAccountName = 4;
}

message RequestReq{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    KartoffelParams kartoffelParams = 8;
    ADParams adParams = 9;
}

message Request{
    string submittedBy = 1;
    RequestStatus status = 2;
    ApproverDecision commanderDecision = 3;
    ApproverDecision securityDecision = 4;
    repeated string commanders = 5;  
    KartoffelStatus kartoffelStatus = 6;
    ADStatus adStatus = 7;
    KartoffelParams kartoffelParams = 8;
    ADParams adParams = 9;

    string id = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12; 
    RequestType type = 13;
}
